# sfFDN

./: .clang-format  .clang-tidy  .cmake-format.yaml  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  cmake-format.yaml  fetch_deps.cmake  readme.md  vcpkg.json
cmake/: llvm-toolchain.cmake  msvc-toolchain.cmake  project-options.cmake  project-warnings.cmake
docs/: Doxyfile
include/sffdn/: audio_buffer.h  audio_processor.h  circular_buffer.h  delay.h  delay_interp.h  delay_matrix.h  delay_time_varying.h  delay_utils.h  delaya.h  delaybank.h  delaybank_time_varying.h  fdn.h  fdn_config.h  feedback_matrix.h  filter.h  filter_design.h  filter_feedback_matrix.h  filterbank.h  matrix_gallery.h  oscillator.h  parallel_gains.h  partitioned_convolver.h  schroeder_allpass.h  sffdn.h
py_binding/: CMakeLists.txt  cpp_fdn.cpp  tests.py
src/: CMakeLists.txt  array_math.cpp  array_math.h  audio_buffer.cpp  audio_buffer.h  audio_processor.cpp  audio_processor.h  cascaded_filter.cpp  circular_buffer.cpp  circular_buffer.h  cmsis_cascaded_filter.cpp  delay.cpp  delay.h  delay_interp.cpp  delay_matrix.cpp  delay_matrix.h  delay_time_varying.cpp  delay_time_varying.h  delay_utils.cpp  delay_utils.h  delaya.cpp  delaya.h  delaybank.cpp  delaybank.h  delaybank_time_varying.cpp  fdn.cpp  fdn.h  fdn_config.cpp  feedback_matrix.cpp  feedback_matrix.h  fft.cpp  fft.h  filter.cpp  filter.h  filter_design.cpp  filter_design.h  filter_design_internal.h  filter_feedback_matrix.cpp  filter_feedback_matrix.h  filter_utils.cpp  (+34 more)
src/CMSIS/: CMakeLists.txt  arm_biquad_cascade_df2T_f32.cpp  arm_biquad_cascade_df2T_init_f32.cpp  filtering_functions.h
tests/: CMakeLists.txt  array_math_perf.cpp  array_math_tests.cpp  audio_buffer_tests.cpp  audio_processor_chain_tests.cpp  delay_perf.cpp  delay_tests.cpp  fdn_perf.cpp  fdn_tests.cpp  fft_tests.cpp  filter_coeffs.h  filter_design_perf.cpp  filter_design_tests.cpp  filter_perf.cpp  filter_tests.cpp  gen_gold_fdn.m  gold_fdn.mat  matrix_multiplication_perf.cpp  matrix_multiplication_tests.cpp  mixmat_perf.cpp  mixmat_tests.cpp  nupols_perf.cpp  nupols_tests.cpp  oscillator_perf.cpp  oscillator_tests.cpp  parallel_gains_perf.cpp  parallel_gains_tests.cpp  test_utils.cpp  test_utils.h  upols_perf.cpp  upols_tests.cpp
